Fixed non-day bug. Collapsed border on calendar.

--- a/TahoeHouse/booktahoe/static/booktahoe/month.css
+++ b/TahoeHouse/booktahoe/static/booktahoe/month.css
@@ -4,6 +4,9 @@ background-color:#b0c4de;
 .datenum {
 font-weight:bold;
 }
+table {
+border-collapse:collapse;
+}
 td {
 vertical-align:text-top;
 border-style:solid;
